k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-api-deploy
  labels:
    app:  task-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  task-api
  template:
    metadata:
      labels:
        app:  task-api
    spec:
      containers:
      - name:  task-api
        image: 558073272056.dkr.ecr.us-east-1.amazonaws.com/aws-eks-terraform:__IMAGE_TAG__
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
