k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
  labels:
    app: task-api
spec:
  type: ClusterIP
  selector:
    app: task-api
  ports:
    - name: http
      protocol: TCP
      port: 80 
      targetPort: 8000
